# aa-js

./: .babelrc  .eslintrc.js  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  index.js  jest.config.js  jsdoc.json  package-lock.json  package.json  travis.yml  tsconfig.json  typedoc.json  vite.config.ts  webpack.config.js
.github/workflows/: nodejs.yml  npmpublish.yml  static.yml
.vitepress/: config.ts
benchmark/: juliandays.js  risetransitset.js  sun.js  trigonometrics.js
benchmark/coordinates/: great-circle-angular-distance.js  horizontal-altitude.js  (+2 more)
docs/: index.md
lib/: index.js
scripts/: generate-sidebar.js
src/: aberration.ts  constants.js  constants.rs  constants.ts  coordinates.js  coordinates.ts  cosmology.js  cosmology.ts  dates.js  dates.ts  decimal.ts  distances.js  distances.ts  earth.js  earth.ts  elliptical.ts  exoplanets.ts  fk5.js  fk5.ts  index.js  index.ts  julianday.js  julianday.ts  juliandays.rs  juliandays.ts  jupiter.ts  lib.rs  mars.ts  moon.js  moon.ts  nutation.js  nutation.ts  precession.ts  riseset.js  risetransitset.ts  risetransitsets.ts  sexagesimal.js  sexagesimal.ts  structs.rs  sun.js  (+10 more)
tests/: .eslintrc  aberration.test.js  constants.test.js  coordinates.test.js  cosmology.test.js  dates.test.js  distances.test.js  earth.test.js  exoplanets.test.js  julianday.test.js  juliandays.test.js  jupiter.test.js  mars.test.js  moon.test.js  nutation.test.js  risetransitset.test.js  risetransitsets.test.js  sexagesimal.test.js  sun.test.js  times.test.js  transits.test.js  utils.test.js  venus.test.js
types/: index.d.ts
(+385 files in other folders)
